--- a/finac/about.html
+++ b/finac/about.html
@@ -108,11 +108,34 @@
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h1 class="display-5 mb-4">Welcome To <span class="text-primary">FINAC</span></h1>
+                <h4>PROFESSIONALLY COMMITTED;</h4>
+                <h3 class="text-primary mb-4"> <strong> MASTERS IN FINANCIAL MANAGEMENT </strong></h3>
+                <p class="mb-4">
+                    <b>FINAC Management Consulting</b> is a multi-professional and business consulting firm headquartered in Calicut, Kerala.
+                    Having 10+ years of professional experience, 
+                    we have been leading the business and financial management sector having clients from across the globe. 
+                    Packed with the leading financial management leaders and authentic experienced professionals in Kerala state,
+                    Finac Management Consulting ensures the professional commitment to the clients.
+                    That is why we are winning the hearts of the regular clients. 
+                </p>
+                <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a> -->
+            </div>
+            <!--Our Values-->
+            <div class="col-lg-6">
+                <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
+                    <img src="img/values.png" alt="" srcset="" class="img-fluid">                   
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="container-fluid bg-secondary p-0">
+        <div class="row g-0">
+            <div class="col-lg-6 py-6 px-5">
+                <h1 class="display-5 mb-4">Welcome To <span class="text-primary">FINAC</span></h1>
                 <h4 class="text-primary mb-4">PROFESSIONALLY COMMITTED; <br> MASTERS IN FINANCIAL MANAGEMENT </h4>
                 <p class="mb-4">
                     <b>Finac Management Consulting</b> is a multi-professional and business consulting firm headquartered in Calicut, Kerala. Having 40 years of professional experience, we have been leading the business and financial management sector having clients from across the globe. Packed with the leading financial management leaders and authentic experienced professionals in Kerala state, Finac Management Consulting ensures the professional commitment to the clients. That is why we are winning the hearts of the regular clients. 
                 </p>
-                <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a> -->
             </div>
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
@@ -146,7 +169,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- About End -->
 
 
