--- a/finac/index.html
+++ b/finac/index.html
@@ -97,7 +97,7 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="" src="img/blog-1.jpg" height="50%" width="100%" alt="Hero-Image">
+                    <img class="" src="img/kelly-sikkema-M98NRBuzbpc-unsplash.jpg" height="50%" width="100%" alt="Hero-Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h1 class="display-1 text-white mb-md-4">We Value Your Business</h1>
