--- a/finac/index.html
+++ b/finac/index.html
@@ -434,7 +434,7 @@
                     <img class="img-fluid w-100" src="img/Murshid.jpg" alt="">
                     <div class="team-text w-100 position-absolute top-60 text-center bg-primary p-4">
                         <h3 class="text-white">Ahmed Murshid</h3>
-                        <p class="text-white text-uppercase mb-0">Associate Consultant</p>
+                        <p class="text-white text-uppercase mb-0">Partner</p>
                     </div>
                 </div>
             </div>
@@ -443,7 +443,7 @@
                     <img class="img-fluid w-100" src="img/Salman.jpg" alt="">
                     <div class="team-text w-100 position-absolute top-60 text-center bg-primary p-4">
                         <h3 class="text-white">Salmanul Farisy</h3>
-                        <p class="text-white text-uppercase mb-0">Associate Consultant</p>
+                        <p class="text-white text-uppercase mb-0">Partner</p>
                     </div>
                 </div>
             </div>
