--- a/finac/index.html
+++ b/finac/index.html
@@ -120,7 +120,7 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="" src="img/kelly-sikkema-M98NRBuzbpc-unsplash.jpg" height="50%" width="100%" alt="Hero-Image">
+                    <img class="" src="img/hero.jpg" height="50%" width="100%" alt="Hero-Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h1 class="display-1 text-white mb-md-4">We Value Your Business</h1>
@@ -139,7 +139,7 @@
     <div class="container-fluid bg-secondary p-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Welcome To <span class="text-primary">FINAC</span></h1>
+                <h1 class="display-5 mb-4">Welcome to <span class="text-primary">FINAC</span></h1>
                 <h4>PROFESSIONALLY COMMITTED;</h4>
                 <h3 class="text-primary mb-4"> <strong> MASTERS IN FINANCIAL MANAGEMENT </strong></h3>
                 <p class="mb-4">
@@ -154,7 +154,7 @@
             </div>
             <!--Our Values-->
             <div class="col-lg-6">
-                <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
+                <div class="h-100 d-flex flex-column justify-content-center bg-light">
                     <img src="img/values.png" alt="" srcset="" class="img-fluid">                   
                 </div>
             </div>
@@ -219,7 +219,7 @@
                     <ul>
                         <li>Registration</li>
                         <li>Administration</li>
-                        <li>12AA, 80G, Nutu Ayog</li>
+                        <li>12AA, 80G, Niti Ayog</li>
                         <li>Grant/Fund Raising</li>
                         <li>Other Solutions</li>
                     </ul>
@@ -236,7 +236,7 @@
                 <div class="sub1 text-dark">
                     <ul>
                         <li>Data Entry</li>
-                        <li>Outline Accounting</li>
+                        <li>Online Accounting</li>
                         <li>Documentation</li>
                         <li>Book Keeping</li>
                         <li>Financial Reporting</li>
@@ -253,7 +253,7 @@
                 <div class="sub1 text-dark">
                     <ul>
                         <li>Tax Audit</li>
-                        <li>Comapny & LLP Audit</li>
+                        <li>Company & LLP Audit</li>
                         <li>Internal Audit</li>
                         <li>Special Audit</li>
                         <li>Other Assignments</li>
@@ -286,7 +286,7 @@
                 </div>
                 <div class="sub1 text-dark">
                     <ul>
-                        <li>MSME/Udayam</li>
+                        <li>MSME/Udyam</li>
                         <li>FSSAI</li>
                         <li>ISO</li>
                         <li>Import Export Code</li>
@@ -452,7 +452,7 @@
         <div class="row g-5">
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/Ubaid.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/team_Ubaid.jpeg" alt="">
                     <div class="team-text w-100 position-absolute top-60 text-center bg-primary p-4">
                         <h3 class="text-white">Ubaid Ali</h3>
                         <p class="text-white text-uppercase mb-0">Director</p>
@@ -461,7 +461,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/Murshid.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/team_02.jpeg" alt="">
                     <div class="team-text w-100 position-absolute top-60 text-center bg-primary p-4">
                         <h3 class="text-white">Ahmed Murshid</h3>
                         <p class="text-white text-uppercase mb-0">Partner</p>
@@ -484,25 +484,24 @@
 
 
     <!-- Partners Start -->
-    <div class="container-fluid bg-secondary p-0">
+    <div class="container-fluid bg-secondary py-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
             <h1 class="display-5 mb-0">Associate Partners</h1>
             <hr class="w-25 mx-auto bg-primary">
         </div>
         <section class="customer-logos slider">
-            <div class="slide"><img src="img/101.png"></div>
-            <div class="slide"><img src="img/102.png"></div>
-            <div class="slide"><img src="img/103.png"></div>
-            <div class="slide"><img src="img/104.png"></div>
-            <div class="slide"><img src="img/105.png"></div>
-            <div class="slide"><img src="img/106.png"></div>
-            <div class="slide"><img src="img/107.png"></div>
-            <div class="slide"><img src="img/108.png"></div>
-            <div class="slide"><img src="img/109.png"></div>
-            <div class="slide"><img src="img/110.jpg"></div>
-            <div class="slide"><img src="img/111.png"></div>
-            <div class="slide"><img src="img/112.png"></div>
-            <div class="slide"><img src="img/113.png"></div>
+            <div class="slide"><img src="img/PAHameed.png"></div>
+            <div class="slide"><img src="img/Trueberry.png"></div>
+            <div class="slide"><img src="img/blueocean.png"></div>
+            <div class="slide"><img src="img/RLLegal.png"></div>
+            <div class="slide"><img src="img/Unimarks.png"></div>
+
+            <div class="slide"><img src="img/ca1.png"></div>
+            <div class="slide"><img src="img/ca2.png"></div>
+            <div class="slide"><img src="img/lestora.png"></div>
+            <div class="slide"><img src="img/atone.png"></div>
+            <div class="slide"><img src="img/CCFPS.png"></div>
+            <div class="slide"><img src="img/Penchantlaw.png"></div>
          </section> 
         <!-- <div class="row g-0">
             <div class="col-lg-6" style="min-height: 500px;">
@@ -550,20 +549,18 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                        <img class="img-fluid" src="img/sparknews.png" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                            <span>01</span>
-                            <h5 class="text-uppercase m-0">Jan</h5>
-                            <span>2045</span>
+                            <span>2022</span>
                         </div>
                         <div class="d-flex flex-column justify-content-center py-3 px-4">
-                            <div class="d-flex mb-2">
+                            <!-- <div class="d-flex mb-2">
                                 <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
                                 <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
-                            </div>
-                            <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
+                            </div> -->
+                            <a class="h4" href="https://www.youtube.com/c/SparkStories">Spark Stories</a>
                         </div>
                     </div>
                 </div>
@@ -571,20 +568,20 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/blog-2.jpg" alt="">
+                        <img class="img-fluid" src="img/Financialexpress.svg" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                            <span>01</span>
-                            <h5 class="text-uppercase m-0">Jan</h5>
-                            <span>2045</span>
+                            <!-- <span>01</span>
+                            <h5 class="text-uppercase m-0">Jan</h5> -->
+                            <span>2022</span>
                         </div>
                         <div class="d-flex flex-column justify-content-center py-3 px-4">
-                            <div class="d-flex mb-2">
+                            <!-- <div class="d-flex mb-2">
                                 <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
                                 <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
-                            </div>
-                            <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
+                            </div> -->
+                            <a class="h4" href="https://www.financialexpress.com/">Financial Express</a>
                         </div>
                     </div>
                 </div>
@@ -592,20 +589,20 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/blog-3.jpg" alt="">
+                        <img class="img-fluid" src="img/dhanamonline.png" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                            <span>01</span>
-                            <h5 class="text-uppercase m-0">Jan</h5>
-                            <span>2045</span>
+                            <!-- <span>01</span> -->
+                            <h5 class="text-uppercase text-light m-0">Jan</h5>
+                            <!-- <span>2045</span> -->
                         </div>
                         <div class="d-flex flex-column justify-content-center py-3 px-4">
-                            <div class="d-flex mb-2">
+                            <!-- <div class="d-flex mb-2">
                                 <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
                                 <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
-                            </div>
-                            <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
+                            </div> -->
+                            <a class="h4" href="https://dhanamonline.com/">Dhanam Online</a>
                         </div>
                     </div>
                 </div>
@@ -646,6 +643,14 @@
                                     <option selected>Financial Consultancy</option>
                                     <option value="1">Strategy Consultancy</option>
                                     <option value="2">Tax Consultancy</option>
+                                    <option value="3">Management Consultancy</option>
+                                    <option value="4">Company & LLP</option>
+                                    <option value="2">Solution for NGO</option>
+                                    <option value="2">Accounting</option>
+                                    <option value="2">Auditing</option>
+                                    <option value="2">Govt. Approvals</option>
+                                    <option value="2">Branding & Marketing</option>
+                                    <option value="2">IPR Services</option>
                                 </select>
                                 <label for="floatingSelect">Select A Service</label>
                             </div>
@@ -714,7 +719,7 @@
                 <h3 class="text-white mb-4">Reach Us</h3>
             <p class="mb-2"><i class="bi bi-geo-alt text-light me-2"></i>2<sup>nd</sup> Floor, Markaz Complex Annex Building, Mavoor Road, Kozhikode - 673 004</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-light me-2"></i><a href="mailto:info@finac.in">info@finac.in</a></p>
-                <p class="mb-0"><i class="bi bi-telephone text-light me-2"></i><a href="tel:+919387313000">9387 313 000</a> | <a href="tel:+918547739160">8547 739 160</a> | <a href="tel:+918907588577">8907 588 577</a></p>
+                <p class="mb-0"><i class="bi bi-telephone text-light me-2"></i><a href="tel:+919387313000">+91 9387 313 000</a> | <a href="tel:+918547739160">+91 8547 739 160</a> | <a href="tel:+918907588577">+91 8907 588 577</a></p>
             </div>
             <div class="col-lg-4 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
@@ -772,6 +777,36 @@
         });
     });
       </script>
+    <!-- Messenger Chat plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "106240017590836");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v12.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
 
 </body>
 
