--- a/finac/index.html
+++ b/finac/index.html
@@ -483,16 +483,16 @@
         <div class="row g-5">
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team_Ubaid.jpeg" alt="">
+                    <img class="img-fluid" src="img/Team_Ubaid.png" alt="Ubaid">
                     <div class="team-text w-100 position-absolute top-60 text-center bg-primary p-4">
                         <h3 class="text-white">Ubaid Ali</h3>
-                        <p class="text-white text-uppercase mb-0">Director</p>
+                        <p class="text-white text-uppercase mb-0">Chairman</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team_02.jpeg" alt="">
+                    <img class="img-fluid" src="img/Team_Murshid.png" alt="Murshid">
                     <div class="team-text w-100 position-absolute top-60 text-center bg-primary p-4">
                         <h3 class="text-white">Ahmed Murshid</h3>
                         <p class="text-white text-uppercase mb-0">Partner</p>
@@ -501,7 +501,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/Salman.jpg" alt="">
+                    <img class="img-fluid" src="img/Team_Salman.png" alt="Salman">
                     <div class="team-text w-100 position-absolute top-60 text-center bg-primary p-4">
                         <h3 class="text-white">Salmanul Farisy</h3>
                         <p class="text-white text-uppercase mb-0">Partner</p>
@@ -517,7 +517,7 @@
     <!-- Partners Start -->
     <div class="container-fluid bg-secondary py-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">Associate Partners</h1>
+            <h1 class="display-5 mb-0">Associated Partners</h1>
             <hr class="w-25 mx-auto bg-primary">
         </div>
         <section class="customer-logos slider">
@@ -580,7 +580,7 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/sparknews.png" alt="">
+                        <img class="img-fluid" src="img/Article_03.png" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -599,7 +599,7 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/Financialexpress.svg" alt="">
+                        <img class="img-fluid" src="img/Article_02.png" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -620,12 +620,12 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/dhanamonline.png" alt="">
+                        <img class="img-fluid" src="img/Article_01.png" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
                             <!-- <span>01</span> -->
-                            <h5 class="text-uppercase text-light m-0">Jan</h5>
+                            <h5 class="text-uppercase text-light m-0">2022</h5>
                             <!-- <span>2045</span> -->
                         </div>
                         <div class="d-flex flex-column justify-content-center py-3 px-4">
@@ -671,17 +671,17 @@
                         <div class="col-6">
                             <div class="form-floating">
                                 <select class="form-select" id="floatingSelect" aria-label="Financial Consultancy">
-                                    <option selected>Financial Consultancy</option>
-                                    <option value="1">Strategy Consultancy</option>
-                                    <option value="2">Tax Consultancy</option>
-                                    <option value="3">Management Consultancy</option>
-                                    <option value="4">Company & LLP</option>
-                                    <option value="2">Solution for NGO</option>
-                                    <option value="2">Accounting</option>
-                                    <option value="2">Auditing</option>
-                                    <option value="2">Govt. Approvals</option>
-                                    <option value="2">Branding & Marketing</option>
-                                    <option value="2">IPR Services</option>
+                                    <option value="1">Financial Consultancy</option>
+                                    <option value="2">Business Consultancy</option>
+                                    <option value="3">Tax Consultancy</option>
+                                    <option value="4">Management Consultancy</option>
+                                    <option value="5">Company & LLP</option>
+                                    <option value="6">Solution for NGO</option>
+                                    <option value="7">Accounting</option>
+                                    <option value="8">Auditing</option>
+                                    <option value="9">Govt. Approvals</option>
+                                    <option value="10">Branding & Marketing</option>
+                                    <option value="11">IPR Services</option>
                                 </select>
                                 <label for="floatingSelect">Select A Service</label>
                             </div>
@@ -750,7 +750,7 @@
                 <h3 class="text-white mb-4">Reach Us</h3>
             <p class="mb-2"><i class="bi bi-geo-alt text-light me-2"></i>2<sup>nd</sup> Floor, Markaz Complex Annex Building, Mavoor Road, Kozhikode - 673 004</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-light me-2"></i><a href="mailto:info@finac.in">info@finac.in</a></p>
-                <p class="mb-0"><i class="bi bi-telephone text-light me-2"></i><a href="tel:+919387313000">+91 9387 313 000</a> | <a href="tel:+918547739160">+91 8547 739 160</a> | <a href="tel:+918907588577">+91 8907 588 577</a></p>
+                <p class="mb-0"><i class="bi bi-telephone text-light me-2"></i><a href="tel:+919387313000">+91 9387 313 000</a> | <a href="tel:+918547739160">8547 739 160</a> | <a href="tel:+918907588577">8907 588 577</a></p>
             </div>
             <div class="col-lg-4 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
