--- a/finac/index.html
+++ b/finac/index.html
@@ -764,7 +764,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">Finac Management Consulting</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://lestora.com">Lestora Technologies</a></p>
+        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">Finac Management Consulting</a>. All Rights Reserved. Developed by <a class="text-secondary border-bottom" href="https://lestora.com">Lestora Technologies</a></p>
     </div>
     <!-- Footer End -->
 
