--- a/finac/index.html
+++ b/finac/index.html
@@ -486,7 +486,7 @@
                     <img class="img-fluid" src="img/Team_Ubaid.png" alt="Ubaid">
                     <div class="team-text w-100 position-absolute top-60 text-center bg-primary p-4">
                         <h3 class="text-white">Ubaid Ali</h3>
-                        <p class="text-white text-uppercase mb-0">Chairman</p>
+                        <p class="text-white text-uppercase mb-0">Founder & Chairman</p>
                     </div>
                 </div>
             </div>
