--- a/finac/index.html
+++ b/finac/index.html
@@ -648,52 +648,58 @@
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h1 class="display-5 mb-4">Contact For Any Queries</h1>
-                <form>
+
+                <!-- Page redirection when a form is submitted -->
+                <script type="text/javascript">var submitted=false;</script>
+                <!-- Update the url for thankyou page -->
+                <iframe name="hidden_iframe" id="hidden_iframe" style="display: none;" onload="if(submitted) { alert('Thank you for reaching us. We will get back you shortly'); }"></iframe>
+
+                <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2jcHYyiEl49S-a19nf7qdU1pX486hAzMFMHcaskuMbrngJA/formResponse" target="hidden_iframe" method="POST">
                     <div class="row g-3">
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe">
+                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe" name="entry.38445917">
                                 <label for="form-floating-1">Full Name</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com">
+                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com" name="entry.1929160717">
                                 <label for="form-floating-2">Email address</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-3" placeholder="Subject">
+                                <input type="text" class="form-control" id="form-floating-3" placeholder="9988776655" name="entry.1117463243">
                                 <label for="form-floating-3">Mobile</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <select class="form-select" id="floatingSelect" aria-label="Financial Consultancy">
-                                    <option value="1">Financial Consultancy</option>
-                                    <option value="2">Business Consultancy</option>
-                                    <option value="3">Tax Consultancy</option>
-                                    <option value="4">Management Consultancy</option>
-                                    <option value="5">Company & LLP</option>
-                                    <option value="6">Solution for NGO</option>
-                                    <option value="7">Accounting</option>
-                                    <option value="8">Auditing</option>
-                                    <option value="9">Govt. Approvals</option>
-                                    <option value="10">Branding & Marketing</option>
-                                    <option value="11">IPR Services</option>
+                                <select class="form-select" aria-label="" name="entry.1076040448">
+                                    <option value="Financial Consultancy">Financial Consultancy</option>
+                                    <option value="Business Consultancy">Business Consultancy</option>
+                                    <option value="Tax Consultancy">Tax Consultancy</option>
+                                    <option value="Management Consultancy">Management Consultancy</option>
+                                    <option value="Company & LLP">Company & LLP</option>
+                                    <option value="Solution for NGO">Solution for NGO</option>
+                                    <option value="Accounting">Accounting</option>
+                                    <option value="Auditing">Auditing</option>
+                                    <option value="Govt. Approvals">Govt. Approvals</option>
+                                    <option value="Branding & Marketing">Branding & Marketing</option>
+                                    <option value="IPR Services">IPR Services</option>
                                 </select>
                                 <label for="floatingSelect">Select A Service</label>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="form-floating">
-                                <textarea class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px"></textarea>
+                                <textarea class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px" name="entry.1348097233"></textarea>
                                 <label for="form-floating-4">Message</label>
                               </div>
                         </div>
                         <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
+                            <button class="btn btn-primary w-100 py-3" type="submit" onsubmit="alert('Thank you')">Submit</button>
                         </div>
                     </div>
                 </form>
