Updare index.html

--- a/finac/index.html
+++ b/finac/index.html
@@ -678,7 +678,8 @@
                 <!-- Update the url for thankyou page -->
                 <iframe name="hidden_iframe" id="hidden_iframe" style="display: none;" onload="if(submitted) { alert('Thank you for reaching us. We will get back you shortly'); }"></iframe>
                 <!-- Form starts here -->
-                <form class="gform" action="https://script.google.com/macros/s/AKfycbw85RWTdydd3Elw0e-IZtMce6CvqzDwXFw98NrmY3G_T_aKM0dY1Ut4AAMxKx4116Sz1A/exec" method="POST">
+                <form class="gform" action="https://script.google.com/macros/s/AKfycbwqBONBcjJqLiq152HOh-U7WGqBJYvGZk6omcH0P7_zA-Upk2LO/exec" method="POST">
+                    
                     <div class="row g-3">
                         <div class="col-6">
                             <div class="form-floating">
@@ -723,7 +724,7 @@
                               </div>
                         </div>
                         <div class="col-12">
-                            <button class="btn btn-primary w-100 py-3" type="submit" onsubmit="alert('Thank you')">Submit</button>
+                            <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
                         </div>
                     </div>
                     <div style="display:none" class="thankyou_message">
