--- a/finac/index.html
+++ b/finac/index.html
@@ -851,7 +851,7 @@
         $("#submit-form").submit((e)=>{
             e.preventDefault()
             $.ajax({
-                url:"https://script.google.com/macros/s/AKfycbwB0CMrGwmIXgSZt74hM2iLcrWXC58wfS4638h2WL3rD7b_dVwLYRBXJmdXv1V-bNAe/exec",
+                url:"https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2jcHYyiEl49S-a19nf7qdU1pX486hAzMFMHcaskuMbrngJA/formResponse",
                 data:$("#submit-form").serialize(),
                 method:"post",
                 success:function (response){
