--- a/finac/index.html
+++ b/finac/index.html
@@ -683,25 +683,25 @@
                     <div class="row g-3">
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe" name="entry.38445917">
+                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe" name="Full Name">
                                 <label for="form-floating-1">Full Name</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com" name="entry.1929160717">
+                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com" name="Email address">
                                 <label for="form-floating-2">Email address</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-3" placeholder="9988776655" name="entry.1117463243">
+                                <input type="text" class="form-control" id="form-floating-3" placeholder="9988776655" name="Mobile">
                                 <label for="form-floating-3">Mobile</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <select class="form-select" aria-label="" name="entry.1076040448">
+                                <select class="form-select" aria-label="" name="Select a Service">
                                     <option value="Financial Consultancy">Financial Consultancy</option>
                                     <option value="Business Consultancy">Business Consultancy</option>
                                     <option value="Tax Consultancy">Tax Consultancy</option>
@@ -719,7 +719,7 @@
                         </div>
                         <div class="col-12">
                             <div class="form-floating">
-                                <textarea class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px" name="entry.1348097233"></textarea>
+                                <textarea class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px" name="Message"></textarea>
                                 <label for="form-floating-4">Message</label>
                               </div>
                         </div>
@@ -851,7 +851,8 @@
         $("#submit-form").submit((e)=>{
             e.preventDefault()
             $.ajax({
-                url:"https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2jcHYyiEl49S-a19nf7qdU1pX486hAzMFMHcaskuMbrngJA/formResponse",
+                // url:"https://docs.google.com/forms/u/0/d/e/1FAIpQLSc2jcHYyiEl49S-a19nf7qdU1pX486hAzMFMHcaskuMbrngJA/formResponse",
+                url: "https://script.google.com/macros/s/AKfycbwB0CMrGwmIXgSZt74hM2iLcrWXC58wfS4638h2WL3rD7b_dVwLYRBXJmdXv1V-bNAe/exec",
                 data:$("#submit-form").serialize(),
                 method:"post",
                 success:function (response){
