--- a/finac/index.html
+++ b/finac/index.html
@@ -683,25 +683,25 @@
                     <div class="row g-3">
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe" name="Full Name">
+                                <input type="text" class="form-control" id="form-floating-1" placeholder="John Doe" name="entry.38445917">
                                 <label for="form-floating-1">Full Name</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com" name="Email address">
+                                <input type="email" class="form-control" id="form-floating-2" placeholder="name@example.com" name="entry.1929160717">
                                 <label for="form-floating-2">Email address</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="form-floating-3" placeholder="9988776655" name="Mobile">
+                                <input type="text" class="form-control" id="form-floating-3" placeholder="9988776655" name="entry.1117463243">
                                 <label for="form-floating-3">Mobile</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
-                                <select class="form-select" aria-label="" name="Select a Service">
+                                <select class="form-select" aria-label="" name="entry.1076040448">
                                     <option value="Financial Consultancy">Financial Consultancy</option>
                                     <option value="Business Consultancy">Business Consultancy</option>
                                     <option value="Tax Consultancy">Tax Consultancy</option>
@@ -719,7 +719,7 @@
                         </div>
                         <div class="col-12">
                             <div class="form-floating">
-                                <textarea class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px" name="Message"></textarea>
+                                <textarea class="form-control" placeholder="Message" id="form-floating-4" style="height: 150px" name="entry.1348097233"></textarea>
                                 <label for="form-floating-4">Message</label>
                               </div>
                         </div>
