--- a/finac/index.html
+++ b/finac/index.html
@@ -561,6 +561,8 @@
             <div class="slide"><img src="img/atone.png"></div>
             <div class="slide"><img src="img/CCFPS.png"></div>
             <div class="slide"><img src="img/Penchantlaw.png"></div>
+            <div class="slide"><img src="img/EB.png"></div>
+
          </section> 
         <!-- <div class="row g-0">
             <div class="col-lg-6" style="min-height: 500px;">
