--- a/brilliant/contact-us.html
+++ b/brilliant/contact-us.html
@@ -94,14 +94,15 @@
     <section id="contact-info">
         <div class="center">                
             <h2>How to Reach Us?</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+            <!-- <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p> -->
         </div>
         <div class="gmap-area">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-5 text-center">
                         <div class="gmap">
-                            <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=JoomShaper,+Dhaka,+Dhaka+Division,+Bangladesh&amp;aq=0&amp;oq=joomshaper&amp;sll=37.0625,-95.677068&amp;sspn=42.766543,80.332031&amp;ie=UTF8&amp;hq=JoomShaper,&amp;hnear=Dhaka,+Dhaka+Division,+Bangladesh&amp;ll=23.73854,90.385504&amp;spn=0.001515,0.002452&amp;t=m&amp;z=14&amp;iwloc=A&amp;cid=1073661719450182870&amp;output=embed"></iframe>
+                            <!-- <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=JoomShaper,+Dhaka,+Dhaka+Division,+Bangladesh&amp;aq=0&amp;oq=joomshaper&amp;sll=37.0625,-95.677068&amp;sspn=42.766543,80.332031&amp;ie=UTF8&amp;hq=JoomShaper,&amp;hnear=Dhaka,+Dhaka+Division,+Bangladesh&amp;ll=23.73854,90.385504&amp;spn=0.001515,0.002452&amp;t=m&amp;z=14&amp;iwloc=A&amp;cid=1073661719450182870&amp;output=embed"></iframe> -->
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3635.4910139249305!2d54.532390913679876!3d24.329382972331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5e3974b9bfcc5b%3A0xd70600c74df3fdbb!2sNew%20Brilliant%20Typing%20%26%20Travels!5e0!3m2!1sen!2sin!4v1647581338568!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
 
@@ -109,38 +110,54 @@
                         <ul class="row">
                             <li class="col-sm-6">
                                 <address>
-                                    <h5>Head Office</h5>
-                                    <p>1537 Flint Street <br>
-                                    Tumon, MP 96911</p>
-                                    <p>Phone:670-898-2847 <br>
-                                    Email Address:info@domain.com</p>
+                                    <h4>Brilliant Typing</h4>
+                                    <p>Musaffah <br>
+                                    Sanaiya M/2 <br>
+                                    P.O.Box: 33245 <br>
+                                    Abu Dhabi - UAE
+                                    </p>
+                                    <p>
+                                        <!-- <label>Phone:</label> -->
+                                        <i class="fa fa-phone"></i>
+                                        <a href="tel:+971565039007">+971 56 503 9007</a>
+                                        <a href="tel:+971586911461">+971 58 691 1461</a> <br>
+                                        <i class="fa fa-envelope"></i>
+                                        <a href="mailto:info.brillianttyping@gmail.com">info.brillianttyping@gmail.com</a>
+                                    </p>
                                 </address>
 
                                 <address>
-                                    <h5>Zonal Office</h5>
-                                    <p>1537 Flint Street <br>
-                                    Tumon, MP 96911</p>                                
-                                    <p>Phone:670-898-2847 <br>
-                                    Email Address:info@domain.com</p>
+                                    <h4>Brilliant Typing Br.1</h4>
+                                    <p>Musaffah <br>
+                                    Sanaiya M/38 <br>
+                                    P.O.Box: 33245 <br>
+                                    Abu Dhabi - UAE
+                                    </p>
+                                    <p>
+                                        <i class="fa fa-phone"></i>
+                                        <a href="tel:+971502134222">+971 50 213 4222</a>
+                                        <a href="tel:+971586911461">+971 58 691 1461</a> <br>
+                                        <i class="fa fa-envelope"></i>
+                                        <a href="mailto:info.brilliantgroupbr@gmail.com">info.brilliantgroupbr@gmail.com</a>
+                                    </p>
                                 </address>
                             </li>
 
 
                             <li class="col-sm-6">
                                 <address>
-                                    <h5>Zone#2 Office</h5>
-                                    <p>1537 Flint Street <br>
-                                    Tumon, MP 96911</p>
-                                    <p>Phone:670-898-2847 <br>
-                                    Email Address:info@domain.com</p>
-                                </address>
-
-                                <address>
-                                    <h5>Zone#3 Office</h5>
-                                    <p>1537 Flint Street <br>
-                                    Tumon, MP 96911</p>
-                                    <p>Phone:670-898-2847 <br>
-                                    Email Address:info@domain.com</p>
+                                    <h4>New Brilliant Typing & Travels</h4>
+                                    <p>Musaffah <br>
+                                    Shabiya M/10 <br>
+                                    P.O.Box: 33245 <br>
+                                    Abu Dhabi - UAE
+                                    </p>
+                                    <p>
+                                        <i class="fa fa-phone"></i>
+                                        <a href="tel:+971502134232">+971 50 213 4232</a> <br>
+                                        <i class="fa fa-envelope"></i>
+                                        <a href="mailto:info.brilliantgroupbr@gmail.com">info.brilliantgroupbr@gmail.com</a>
+                                    </p>
                                 </address>
                             </li>
                         </ul>
@@ -153,8 +170,8 @@
     <section id="contact-page">
         <div class="container">
             <div class="center">        
-                <h2>Drop Your Message</h2>
-                <p class="lead">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h2>Drop Your Message. We will get back to you!</h2>
+                <!-- <p class="lead">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
             </div> 
             <div class="row contact-wrap"> 
                 <div class="status alert alert-success" style="display: none"></div>
