--- a/brilliant/contact-us.html
+++ b/brilliant/contact-us.html
@@ -71,20 +71,16 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="fa fa-angle-down"></i></a>
+                        <li><a href="#">About Us</a></li>
+                        <li class="dropdown"><a href="#"> &nbsp; Services<i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="blog-item.html">Blog Single</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="404.html">404</a></li>
-                                <li><a href="shortcodes.html">Shortcodes</a></li>
+                                <li><a href="typing.html">Typing</a></li>
+                                <li><a href="travels.html">Tours & Travels</a></li>
+                                <li><a href="tax.html">Business & Tax</a></li>
                             </ul>
                         </li>
-                        <li><a href="blog.html">Blog</a></li> 
-                        <li class="active"><a href="contact-us.html">Contact</a></li>                        
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li class="active"><a href="contact-us.html">Contact</a></li>                
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -187,11 +183,11 @@
                         </div>
                         <div class="form-group">
                             <label>Phone</label>
-                            <input type="text" class="form-control" style="border: 1px solid black;" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
+                            <input type="text" name="phone" class="form-control" style="border: 1px solid black;" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
                         </div>
                         <div class="form-group">
                             <label>Company Name</label>
-                            <input type="text" class="form-control" style="border: 1px solid black;">
+                            <input type="text" name="companyname" class="form-control" style="border: 1px solid black;">
                         </div>                        
                     </div>
                     <div class="col-sm-5">
