--- a/brilliant/index.html
+++ b/brilliant/index.html
@@ -530,12 +530,11 @@ been connected with shuraa business</p>
                     <div class="widget">
                         <h3>Our Partners</h3>
                         <ul>
-                            <li><a href="#">Tas-heel</a></li>
-                            <li><a href="#">Emirates ID Authority</a></li>
-                            <li><a href="#">Dubai Economy</a></li>
-                            <li><a href="#">Amer</a></li>
-                            <li><a href="#">Tamm</a></li>
-                           
+                            <li>Tas-heel</li>
+                            <li>Emirates ID Authority</li>
+                            <li>Dubai Economy</li>
+                            <li>Amer</li>
+                            <li>Tamm</li>
                         </ul>
                     </div>    
                 </div><!--/.col-md-3-->
