--- a/brilliant/contact-us.html
+++ b/brilliant/contact-us.html
@@ -71,12 +71,13 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="active">About Us</a></li>
                         <li class="dropdown"><a href="#"> &nbsp; Services<i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="typing.html">Typing</a></li>
                                 <li><a href="travels.html">Tours & Travels</a></li>
                                 <li><a href="tax.html">Business & Tax</a></li>
+                                <li><a href="events.html">Event Management</a></li>
                             </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
