--- a/brilliant/index.html
+++ b/brilliant/index.html
@@ -9,7 +9,7 @@
 	
 	<!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="css/font-awesome.min.css" rel="stylesheet"> -->
+    <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
@@ -33,11 +33,15 @@
         <div class="top-bar">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6 col-xs-4">
+                    <!-- <div class="col-sm-6 col-xs-4"> -->
+                    <div class="col-sm-4">
+
                         <div class="top-number"><i class="fa fa-phone-square"></i><a href="tel:+971565039007">+971 56 503 9007</a></div>
                     </div>
-                    <div class="col-sm-6 col-xs-8">
-                       <div class="social">
+                    <div class="col-sm-8 offset-sm-8">
+                    <!-- <div class="col-sm-6 col-xs-8"> -->
+
+                        <div class="social">
                             <ul class="social-share">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
