--- a/brilliant/events.html
+++ b/brilliant/events.html
@@ -31,10 +31,11 @@
         <div class="top-bar">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6 col-xs-4">
-                        <div class="top-number"><p><i class="fa fa-phone-square"></i> <a href="tel:+97125512505">02 55 12 505</a> | <a href="tel:+971565039007">+971 56 503 9007</a> | <a href="tel:+971586911461">+971 58 691 1461</a></p></div>
+                    <div class="col-sm-4">
+
+                        <div class="top-number"><i class="fa fa-phone-square"></i><a href="tel:+971565039007">+971 56 503 9007</a></div>
                     </div>
-                    <div class="col-sm-6 col-xs-8">
+                    <div class="col-sm-8 offset-sm-8">
                        <div class="social">
                             <ul class="social-share">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
