--- a/brilliant/events.html
+++ b/brilliant/events.html
@@ -71,8 +71,12 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
-                        <li class=""><a href="about-us.html">About Us</a></li>
-                        <li class="dropdown active"><a href="#"> &nbsp; Services<i class="fa fa-angle-down"></i></a>
+                        <li class="dropdown"><a href="about-us.html">About Us &nbsp; <i class="fa fa-angle-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="ceo.html">CEO's Message</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown active"><a href="#">  Services &nbsp; <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="typing.html">Typing</a></li>
                                 <li><a href="travels.html">Tours & Travels</a></li>
