--- a/brilliant/events.html
+++ b/brilliant/events.html
@@ -76,13 +76,49 @@
                                 <li><a href="ceo.html">CEO's Message</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown active"><a href="#">  Services &nbsp; <i class="fa fa-angle-down"></i></a>
+                        <li class="dropdown"><a href="#">Services &nbsp; <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="typing.html">Typing</a></li>
-                                <li><a href="travels.html">Tours & Travels</a></li>
-                                <li><a href="tax.html">Business & Tax</a></li>
-                                <li><a href="events.html">Event Management</a></li>
-
+                                <li class="dropdown-submenu"><a href="#">Typing & Businessman &nbsp; <i class="fa fa-angle-right"></i></a>
+                                    <ul class="uplift">
+                                        <li><a href="typing.html#typing">Tas-heel services</a></li>
+                                        <li><a href="typing.html#typing">Emirates ID</a></li>
+                                        <li><a href="typing.html#typing">Legal sesrvices</a></li>
+                                        <li><a href="typing.html#typing">Online E-channel</a></li>
+                                        <li><a href="typing.html#typing">Consultation</a></li>
+                                        <li><a href="typing.html#typing">Business Licensing</a></li>
+                                        <li><a href="typing.html#typing">Vat Consultancy</a></li>
+                                        <li><a href="typing.html#typing">Visa Services</a></li>
+                                        <li><a href="typing.html#typing">Power Of Anttorney</a></li>
+                                        <li><a href="typing.html#typing">Trade License</a></li>
+                                        <li><a href="typing.html#typing">PRO Services</a></li>
+                                        <li><a href="typing.html#typing">Businessman services</a></li>
+                                        <li><a href="typing.html#typing">Insurance</a></li>
+                                        <li><a href="typing.html#typing">Transnlation Services</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown-submenu"><a href="#">Tours & Travels &nbsp; <i class="fa fa-angle-right"></i></a>
+                                    <ul class="uplift">
+                                        <li><a href="travels.html#profile-tab">Inbound Tours</a></li>
+                                        <li><a href="travels.html#messages-tab">Outbound Tours</a></li>
+                                        <!-- <li><a href="#"></a></li> -->
+                                    </ul>
+                                </li>
+                                
+                                <li class="dropdown-submenu"><a href="events.html">Event Management &nbsp; <i class="fa fa-angle-right"></i></a>
+                                    <ul class="uplift">
+                                        <li><a href="#">Arts & Musical</a></li>
+                                        <li><a href="#">Musical Band</a></li>
+                                        <li><a href="#">Folklore Dance</a></li>
+                                        <li><a href="#">Parties & Event Filming</a></li>
+                                        <li><a href="#">Corporate Event</a></li>
+                                        <li><a href="#">Fashon Shows</a></li>
+                                        <li><a href="#">Parties & entertainment</a></li>
+                                        <li><a href="#">hospitality Services</a></li>
+                                        <li><a href="#">Recreational Services</a></li>
+                                        <li><a href="#">Wedding Party</a></li>
+                                        <li><a href="#">Birthday Party</a></li>
+                                    </ul>
+                                </li>
                             </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
